; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_stage.c_test_index_stage__add_always_adds_stage_0.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_stage.c_test_index_stage__add_always_adds_stage_0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"./mergedrepo/new-file.txt\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"new-file\0A\00", align 1
@repo_index = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"new-file.txt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_stage__add_always_adds_stage_0() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %4 = load i32, i32* @repo_index, align 4
  %5 = call i32 @git_index_add_bypath(i32 %4, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @repo_index, align 4
  %8 = call i32 @git_index_find(i64* %1, i32 %7, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @cl_assert(i32 %11)
  %13 = load i32, i32* @repo_index, align 4
  %14 = load i64, i64* %1, align 8
  %15 = call i32* @git_index_get_byindex(i32 %13, i64 %14)
  store i32* %15, i32** %2, align 8
  %16 = icmp ne i32* %15, null
  %17 = zext i1 %16 to i32
  %18 = call i32 @cl_assert(i32 %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i64 @git_index_entry_stage(i32* %19)
  %21 = icmp eq i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @cl_assert(i32 %22)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_index_add_bypath(i32, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_index_find(i64*, i32, i8*) #1

declare dso_local i32* @git_index_get_byindex(i32, i64) #1

declare dso_local i64 @git_index_entry_stage(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
